Turn on click_through by default, since it's stable enough now.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
                 text        : strs[Math.floor(Math.random()*strs.length)],
                 icon        : images[Math.floor( Math.random() * (images.length+1) )],
                 sticky      : bool[Math.floor(Math.random()*bool.length)],
-                dismissable : bool[Math.floor(Math.random()*bool.length)]
+                dismissable : bool[Math.floor(Math.random()*bool.length)],
+                click_through : true
             });
         };
 
