Change Region, Point and PriorityQueue to proper constructor function

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       }
     </style>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="notify-osd.js"></script>
     <script type="text/javascript">
         $(function() {
